Move some java.io.File to java.nio.file.Path